2006-06-13  Richard Earnshaw  <rearnsha@arm.com>

	* configure: Regenerated.

2006-06-05  Daniel Jacobowitz  <dan@codesourcery.com>

	* configure: Regenerated.

2006-05-31  Daniel Jacobowitz  <dan@codesourcery.com>

	* configure: Regenerated.

2005-03-23  Mark Kettenis  <kettenis@gnu.org>

	* configure: Regenerate.

2005-01-14  Andrew Cagney  <cagney@gnu.org>

	* configure.ac: Sinclude aclocal.m4 before common.m4.  Add
	explicit call to AC_CONFIG_HEADER.
	* configure: Regenerate.

2005-01-12  Andrew Cagney  <cagney@gnu.org>

	* configure.ac: Update to use ../common/common.m4.
	* configure: Re-generate.

2005-01-11  Andrew Cagney  <cagney@localhost.localdomain>

	* configure: Regenerated to track ../common/aclocal.m4 changes.

2005-01-07  Andrew Cagney  <cagney@gnu.org>

	* configure.ac: Rename configure.in, require autoconf 2.59.
	* configure: Re-generate.

2004-12-08  Hans-Peter Nilsson  <hp@axis.com>

	* configure: Regenerate for ../common/aclocal.m4 update.

2004-06-28  Alexandre Oliva  <aoliva@redhat.com>

	2003-07-23  Richard Sandiford  <rsandifo@redhat.com>
	* compile.c (sim_resume): Make sure that dst.reg refers to the
	right register byte in mova/sz.l @(dd,RnL),ERn.
	2003-07-21  Richard Sandiford  <rsandifo@redhat.com>
	* compile.c (sim_resume): Zero-extend immediate to muls, mulsu,
	mulxs, divs and divxs.

	* compile.c (sim_load): Update sd->memory_size.

2004-06-10  Michael Snyder  <msnyder@redhat.com>

	Patch submitted by Nitin Yewale <NitinY@KPITCummins.com>.
	* compile.c (sim_resume): Corrected ANDC operation on EXR for H8S.

2004-01-05  Michael Snyder  <msnyder@redhat.com>

	* compile.c (sim_load): Don't pass a type to bfd_openr.

2003-12-16  Michael Snyder  <msnyder@redhat.com>

	Patch submitted by Anil Paranjape <AnilP1@KPITCummins.com>
	* sim-main.h (H8300H_MSIZE): Increase from 18 bits to 24 bits.

2003-12-11  Dhananjay Deshpande  <dhananjayd@kpitcummins.com>

        * compile.c (set_h8300h): Initialize globals to zero.
