@@ -1,3 +1,8 @@
+2006-07-13  Yoshinori Sato <ysato@users.sourceforge.jp>
+
+	* compile.c (OBITOP): Bit address mask low three bit.
+	* compile.c (decode): Fix warning.
+
 2006-06-13  Richard Earnshaw  <rearnsha@arm.com>
 
 	* configure: Regenerated.
